<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
			 android:layout_width="wrap_content"
			 android:layout_height="wrap_content">

	<TableRow>

			<TextView
				android:layout_width="wrap_content"
				android:text = "@string/ItemName"
			/>

			<EditText
				android:id ="@+id/etItemName"
				android:layout_width="120dp"
			/>

	</TableRow>

	<TableRow>

			<TextView
					android:layout_width="wrap_content"
					android:text="@string/tvDueDate" />

			<TextView
					android:id="@+id/enterDate"
					android:width="200dp"
					android:gravity="center"
					android:textSize="20dp" />

	</TableRow>


	<TableRow>

		<TextView
				android:layout_width="wrap_content"
				android:text = "@string/ItemQuantitty"
		/>

		<EditText
				android:id ="@+id/etItemQuantity"
				android:layout_width="120dp"
				android:hint = "@string/a_number_please"
				android:inputType="number"
		/>

	</TableRow>

	<TableRow>

		<TextView
			android:layout_width="wrap_content"
			android:text = "@string/ItemType"
		/>

		<Spinner
			android:id = "@+id/spnItemType"
			android:width = "200dp" />
	</TableRow>

	<TableRow>
		<Button
			android:id = "@+id/btnNewItemOK"
			android:layout_width="160dp"
			android:layout_gravity="bottom"
			android:text = "@string/btnOK"
		/>

		<Button
			android:id = "@+id/btnNewItemCancel"
			android:layout_width="160dp"
			android:layout_gravity="bottom"
			android:text = "@string/btnCancel"
		/>

	</TableRow>


</TableLayout>