<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_height="match_parent"
                  android:layout_width="match_parent"
                  android:background="@color/Black"
                  xmlns:tools="http://schemas.android.com/tools">

        <TextView
            android:id="@+id/tvDetailQuantity"
            android:layout_width = "wrap_content"
            android:layout_height = "wrap_content"
            tools:context = ".MyItemDetailFragment"
            android:textIsSelectable="true"
            android:textSize="25sp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="40dp"
            android:textColor="@color/GhostWhite"
        />

        <Button
             android:id = "@+id/btnChangeQuantity"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="25sp"
             android:layout_marginStart="70dp"
             android:layout_marginTop="110dp"
             android:text = "@string/ChangeQuantity"
             android:textColor="@color/Green"
        />

        <TextView
                android:id="@+id/tvDetailDueDateInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="200dp"
                android:text = "@string/DueDateInfo"
                android:textColor="@color/GhostWhite"
        />

        <TextView
                android:id="@+id/tvDetailDueDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textIsSelectable="true"
                android:textSize="25sp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="230dp"
                android:textColor="@color/GhostWhite"
        />

        <Button
                android:id = "@+id/btnChangeDueTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:layout_marginStart="70dp"
                android:layout_marginTop="280dp"
                android:text = "@string/ChangeDueTime"
                android:textColor="@color/Red"
        />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginTop="370dp"
                android:text="@string/if_you_have_run_out_of_this_item_and_and_you_have_rebuyed_please_click_on_the_button_below"
                android:textColor="@color/GhostWhite"
        />

        <Button
                android:id = "@+id/btnRebuy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:layout_marginStart="130dp"
                android:layout_marginTop="470dp"
                android:text="@string/rebuy"
                android:textColor="@color/Purple"
        />



</FrameLayout>