<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="horizontal">

    <ImageView
            android:id="@+id/ivPriority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="2dp"/>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

        <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:textStyle="bold|italic"
                android:text="@string/title"
                android:textSize="24sp" />

        <TextView
                android:id="@+id/tvDueDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvName"
                android:textStyle="bold|italic"
                android:text="@string/duedate"
                android:textSize="16sp" />


        <TextView
                android:id="@+id/tvQuantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvDueDate"
                android:textStyle="bold|italic"
                android:textSize="16sp"/>

        <TextView
                android:id="@+id/tvType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvDueDate"
                android:layout_toEndOf="@+id/tvQuantity"
                android:layout_marginStart="10dp"
                android:textStyle="bold|italic"
                android:text="@string/type"
                android:textSize="16sp" />

        <View android:layout_width="match_parent"
              android:layout_height="6dp"
              android:background="@color/colorPrimaryDark"
              android:layout_below="@+id/tvQuantity"
        />


    </RelativeLayout>

</LinearLayout>